--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/en/_build/html/index.html">
+<meta http-equiv="refresh" content="0;url=en/_build/html/index.html">
