--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<p> Hello world</p>
+<meta http-equiv='cache-control' content='no-cache'> 
+<meta http-equiv='expires' content='0'> 
+<meta http-equiv='pragma' content='no-cache'>
+<meta http-equiv="refresh" content="0;url=en/_build/html/intro.html">
